<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlgorithmSelectionActivity">


    <ImageView
        android:id="@+id/rectimage2"
        android:layout_width="411dp"
        android:layout_height="172dp"
        android:src="@drawable/rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001" />

    <TextView
        android:id="@+id/SelectAlgorithmTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_segmentation_algoritm"
        android:textColor="#323131"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.123" />

    <Button
        android:id="@+id/thresholdAlg"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/rounded_corners_square_btns"
        android:text="@string/otsu"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rectimage2"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/Edge"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_corners_square_btns"
        android:text="@string/edge_based"
        android:textColor="@color/white"
        android:textSize="21sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thresholdAlg"
        app:layout_constraintVertical_bias="0.139" />

    <Button
        android:id="@+id/regionBased"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="53dp"
        android:background="@drawable/rounded_corners_square_btns"
        android:text="@string/region_based"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/thresholdAlg"
        app:layout_constraintTop_toBottomOf="@+id/rectimage2"
        app:layout_constraintVertical_bias="0.01" />

    <Button
        android:id="@+id/kmeans"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:background="@drawable/rounded_corners_square_btns"
        android:text="@string/k_means"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toEndOf="@+id/Edge"
        app:layout_constraintTop_toBottomOf="@+id/regionBased"
        app:layout_constraintVertical_bias="0.139" />


    <Button
        android:id="@+id/applyAll"
        android:layout_width="324dp"
        android:layout_height="76dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/apply_all"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectimage2"
        app:layout_constraintVertical_bias="0.864" />

</androidx.constraintlayout.widget.ConstraintLayout>